--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="backgroundcontainer">
         <div class="container">
             <div class="col">
-                <h1 class="mainhead">Add the Task</h1>
+                <h1 class="mainhead">Task remainder</h1>
                 <h1 class="firsthead">Add<span class="firsthead-sub"> Task</span></h1>
                 <div class="input-container">
                     <input type="text" class="user-input" placeholder="Name the task..">
