--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
                 <ul class="task-container" id="todoItemsContainer"></ul>
                 <!-- Renamed id to "todoItemsContainer" for JavaScript reference -->
                 <button class="save" id="saveTodoButton">Save</button>
+                <button class="delete-selected-button">Delete Selected</button>
+
                 <!-- Renamed id to "saveTodoButton" for JavaScript reference -->
             </div>
         </div>
